--- a/blog.html
+++ b/blog.html
@@ -53,6 +53,22 @@
 						</p>
 					</div>
 				</li>
+
+				<li>
+					<div class="blog-image">
+						<a href="https://github.com/NamitraKali/XrayConv">
+							<img src="/img/XRay.jpeg">
+						</a>
+					</div>
+					<div class="blog-text">
+						<a href="https://github.com/NamitraKali/XrayConv" class="project_title">
+							XrayConv - Pneumonia Diagnosis with a CNN
+						</a>
+						<p class="project_description">
+							Performing Transfer Learning on a pretrained ResNet50 model, so that we can diagnose the prescence of pneumonia in a chest X-Ray.
+						</p>
+					</div>
+				</li>
 			</ul>
 
 		</div>
