Fix Resume Upload

--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
 	<div class="container">
 		<div class="blurb">
 			<h1>My Resume</h1>
-			<embed src="img/My_Resume.pdf" width="800px" height="1050px" /> 
+			<embed src="img/Namitra_Resume.pdf" width="800px" height="1050px" />
 		</div>
 		<!-- /.blurb -->
 	</div>
